[INJIWEB-1735] updated the trusted verifier screen content and corrected test file.
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "مدقق غير معروف",
-      "description": "تأكد من أنك تتعرّف على هذا المُصدر أو تثق به. \nبمجرد أن تثق بهذا الموثّق:",
-      "benefitSaveSecurely": "سيتم حفظ البطاقة بأمان في محفظتك.",
+      "description": "تأكد من أنك تتعرّف على هذا الموثّق أو تثق به. \nبمجرد أن تثق بهذا الموثّق:",
+      "benefitSaveSecurely": "سيتذكر محفظتك هذا الموثّق كجهة موثوقة.",
       "benefitAddToTrustedList": "ستتم إضافة هذا المدقق إلى قائمة الثقة الخاصة بك.",
-      "benefitSkipReviewFuture": "لن تحتاج إلى مراجعة الثقة مرة أخرى عند التنزيل منهم في المرة القادمة.",
+      "benefitSkipReviewFuture": "طلبات التحقق المستقبلية من هذا الموثّق سيتم الوثوق بها تلقائيًا.",
       "trustButton": "نعم، أنا أثق بهذا المدقق",
       "notTrustButton": "لا، أنا لا أثق بهذا المدقق",
       "infoTooltipButton": "ماذا تعني الثقة؟",
