--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "अज्ञात सत्यापनकर्ता",
-      "description": "सुनिश्चित करें कि आप इस जारीकर्ता को पहचानते हैं या उस पर भरोसा करते हैं। \nजब आप इस सत्यापनकर्ता पर भरोसा कर लें:",
-      "benefitSaveSecurely": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
+      "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या उस पर भरोसा करते हैं। \nजब आप इस सत्यापनकर्ता पर भरोसा कर लें:",
+      "benefitSaveSecurely": "आपका वॉलेट इस सत्यापनकर्ता को विश्वसनीय रूप में याद रखेगा।",
       "benefitAddToTrustedList": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
-      "benefitSkipReviewFuture": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
+      "benefitSkipReviewFuture": "भविष्य में इस सत्यापनकर्ता के अनुरोध स्वचालित रूप से भरोसेमंद माने जाएंगे।",
       "trustButton": "हाँ, मैं इस सत्यापनकर्ता पर भरोसा करता हूँ",
       "notTrustButton": "नहीं, मैं इस सत्यापनकर्ता पर भरोसा नहीं करता हूँ",
       "infoTooltipButton": "भरोसा करने का क्या मतलब है?",
