--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "ಅಪರಿಚಿತ ವಿತರಕ",
-      "description": "ಈ ಜಾರಿ ಮಾಡುವವರನ್ನು ನೀವು ಗುರುತಿಸುತ್ತೀರಾ ಅಥವಾ ನಂಬುತ್ತೀರಾ ಎಂಬುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nಈ ಪರಿಶೀಲಕರ ಮೇಲೆ ನೀವು ನಂಬಿಕೆ ಇಟ್ಟ ನಂತರ:",
-      "benefitSaveSecurely": "ಕಾರ್ಡ್ ನಿಮ್ಮ ವಾಲೆಟ್‌ನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಉಳಿಸಲಾಗುತ್ತದೆ.",
+      "description": "ಈ ಪರಿಶೀಲಕನನ್ನು ನೀವು ಗುರುತಿಸುತ್ತೀರಾ ಅಥವಾ ನಂಬುತ್ತೀರಾ ಎಂಬುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nನೀವು ಈ ಪರಿಶೀಲಕರನ್ನು ನಂಬಿದ ನಂತರ:",
+      "benefitSaveSecurely": "ನಿಮ್ಮ ವಾಲೆಟ್ ಈ ಪರಿಶೀಲಕರನ್ನು ವಿಶ್ವಾಸಾರ್ಹವಾಗಿ ನೆನಪಿಟ್ಟುಕೊಳ್ಳುತ್ತದೆ.",
       "benefitAddToTrustedList": "ಈ ವಿತರಣೆದಾರರನ್ನು ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲಾಗುತ್ತದೆ.",
-      "benefitSkipReviewFuture": "ಮುಂದಿನ ಬಾರಿ ಅವರಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡುವಾಗ ನೀವು ಮತ್ತೆ ವಿಶ್ವಾಸಾರ್ಹತೆಯನ್ನು ಪರಿಶೀಲಿಸುವ ಅಗತ್ಯವಿಲ್ಲ.",
+      "benefitSkipReviewFuture": "ಭವಿಷ್ಯದ ಪರಿಶೀಲನಾ ವಿನಂತಿಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ವಿಶ್ವಾಸಾರ್ಹವಾಗಿ ಪರಿಗಣಿಸಲ್ಪಡುತ್ತವೆ.",
       "trustButton": "ಹೌದು, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುತ್ತೇನೆ",
       "notTrustButton": "ಇಲ್ಲ, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದಿಲ್ಲ",
       "infoTooltipButton": "ನಂಬಿಕೆ ಇಡುವುದು ಅಂದರೆ ಏನು?",
