--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "அறியப்படாத வழங்குநர்",
-      "description": "இந்த வெளியீட்டாளரை நீங்கள் அறிந்தவரா அல்லது அவரை நம்புகிறீர்களா என்பதை உறுதிப்படுத்துங்கள். \nஇந்த சரிபார்ப்பவரை நீங்கள் நம்பியபின்:",
-      "benefitSaveSecurely": "அட்டை உங்கள் வாலட்டில் பாதுகாப்பாகச் சேமிக்கப்படும்.",
+      "description": "இந்த சரிபார்ப்பவரை நீங்கள் அறிந்தவரா அல்லது அவரை நம்புகிறீர்களா என்பதை உறுதிப்படுத்துங்கள். \nநீங்கள் இந்த சரிபார்ப்பவரை நம்பியபின்:",
+      "benefitSaveSecurely": "உங்கள் பணப்பை இந்த சரிபார்ப்பவரை நம்பத்தகுந்தவராக நினைவில் வைத்துக்கொள்ளும்.",
       "benefitAddToTrustedList": "இந்த வழங்கி உங்கள் நம்பகமான பட்டியலில் சேர்க்கப்படும்.",
-      "benefitSkipReviewFuture": "அடுத்த முறை இவர்களிடமிருந்து பதிவிறக்கும்போது மீண்டும் நம்பகத்தன்மையைச் சரிபார்க்கத் தேவையில்லை.",
+      "benefitSkipReviewFuture": "எதிர்கால சரிபார்ப்பு கோரிக்கைகள் தானாகவே நம்பத்தகுந்ததாக எண்ணப்படும்.",
       "trustButton": "ஆம், நான் இந்த வழங்கியை நம்புகிறேன்",
       "notTrustButton": "இல்லை, நான் இந்த வழங்கியை நம்பவில்லை",
       "infoTooltipButton": "நம்புவது என்றால் என்ன?",
