--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -512,9 +512,16 @@
       "addTrustedVerifierError": "ವಿತರಣೆದಾರರನ್ನು ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲು ವಿಫಲವಾಗಿದೆ."
     },
     "ErrorCard": {
-      "defaultTitle": "ದೋಷ",
-      "defaultDescription": "ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "defaultTitle": "ಏನೋ ತಪ್ಪಾಗಿದೆ",
+      "defaultDescription": "ನಾವು ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ದಯವಿಟ್ಟು ಮುಚ್ಚಿ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "technicalTitle": "ಅಯ್ಯೋ! ದೋಷ ಸಂಭವಿಸಿದೆ.",
+      "technicalDescription": "ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸುವಾಗ ತಾಂತ್ರಿಕ ಸಮಸ್ಯೆ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "closeButton": "ಮುಚ್ಚಿ"
+    },
+    "RetryCard": {
+      "defaultTitle": "ಏನೋ ತಪ್ಪಾಗಿದೆ",
+      "defaultDescription": "ನಾವು ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "retryButton": "ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ"
     },
     "loadingCard": {
       "title": "ವಿತರಣೆದಾರರ ಮಾಹಿತಿಯನ್ನು ಪಡೆಯಲಾಗುತ್ತಿದೆ...",
