--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -511,6 +511,18 @@
       "invalidVerifierResponse": "தவறான வழங்கி பதில் பெறப்பட்டது.",
       "addTrustedVerifierError": "நம்பகமான பட்டியலில் வழங்கியைச் சேர்க்க முடியவில்லை."
     },
+    "ErrorCard": {
+      "defaultTitle": "ஏதோ தவறு ஏற்பட்டுள்ளது",
+      "defaultDescription": "உங்கள் கோரிக்கையை நிறைவேற்ற முடியவில்லை. தயவுசெய்து மூடி பின்னர் மீண்டும் முயற்சிக்கவும்.",
+      "technicalTitle": "அச்சு! ஒரு பிழை ஏற்பட்டது.",
+      "technicalDescription": "உங்கள் கோரிக்கையை செயலாக்கும் போது தொழில்நுட்ப சிக்கல் ஏற்பட்டது. சில நேரம் கழித்து மீண்டும் முயற்சிக்கவும்.",
+      "closeButton": "மூடு"
+    },
+    "RetryCard": {
+      "defaultTitle": "ஏதோ தவறு ஏற்பட்டுள்ளது",
+      "defaultDescription": "உங்கள் கோரிக்கையை நிறைவேற்ற முடியவில்லை. தயவுசெய்து மீண்டும் முயற்சிக்கவும்.",
+      "retryButton": "மீண்டும் முயற்சிக்கவும்"
+    },
     "loadingCard": {
       "title": "வழங்கி தகவலைப் பெறுகிறது...",
       "subtitle": "நாங்கள் கோரிக்கையைச் சரிபார்த்து, உங்கள் சான்றுகளைத் தயாரிக்கும் வரை காத்திருக்கவும்."
