[INJIWEB-1735] Suggestions on improving language in ar.json and fr.json
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>

--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -514,7 +514,7 @@
     "ErrorCard": {
       "defaultTitle": "Une erreur s’est produite",
       "defaultDescription": "Nous n’avons pas pu terminer votre demande. Veuillez fermer et réessayer plus tard.",
-      "technicalTitle": "Oups ! Une erreur est survenue.",
+      "technicalTitle": "Oups ! Une erreur est survenu.",
       "technicalDescription": "Un problème technique est survenu lors du traitement de votre demande. Vous pouvez réessayer dans un instant.",
       "closeButton": "Fermer"
     },
