--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -490,15 +490,15 @@
   },
   "VerifierTrustPage": {
     "modal": {
-      "title": "مدقق غير معروف",
+      "title": "موثّق غير معروف",
       "description": "تأكد من أنك تتعرّف على هذا الموثّق أو تثق به. \nبمجرد أن تثق بهذا الموثّق:",
       "benefitSaveSecurely": "سيتذكر محفظتك هذا الموثّق كجهة موثوقة.",
-      "benefitAddToTrustedList": "ستتم إضافة هذا المدقق إلى قائمة الثقة الخاصة بك.",
+      "benefitAddToTrustedList": "ستتم إضافة هذا الموثّق إلى قائمة الثقة الخاصة بك.",
       "benefitSkipReviewFuture": "طلبات التحقق المستقبلية من هذا الموثّق سيتم الوثوق بها تلقائيًا.",
-      "trustButton": "نعم، أنا أثق بهذا المدقق",
-      "notTrustButton": "لا، أنا لا أثق بهذا المدقق",
+      "trustButton": "نعم، أنا أثق بهذا الموثّق",
+      "notTrustButton": "لا، أنا لا أثق بهذا الموثّق",
       "infoTooltipButton": "ماذا تعني الثقة؟",
-      "infoTooltipText": "إن الثقة في المدقق تسمح له بطلب بيانات الاعتماد الخاصة بك. ستظل تختار بيانات الاعتماد التي تريد مشاركتها في الخطوة التالية."
+      "infoTooltipText": "إن الثقة في الموثّق تسمح له بطلب بيانات الاعتماد الخاصة بك. ستظل تختار بيانات الاعتماد التي تريد مشاركتها في الخطوة التالية."
     },
     "TrustRejectionModal": {
       "title": "هل أنت متأكد أنك تريد الإلغاء؟",
