--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -396,7 +396,7 @@
     "success": "आगे बढ़ना",
     "cancel": "रद्द करना"
   },
-  "LoadingModalLandscape": {
+  "ShareHandlerLoadingModal": {
     "message": "आपकी सुरक्षित क्रेडेंशियल प्रस्तुति तैयार की जा रही है..."
   },
   "CredentialShareSuccessModal": {
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "अज्ञात सत्यापनकर्ता",
-      "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या इस पर भरोसा करते हैं। \nएक बार जब आप इस सत्यापनकर्ता पर भरोसा कर लेते हैं:",
-      "benefitSaveSecurely": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
+      "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या उस पर भरोसा करते हैं। \nजब आप इस सत्यापनकर्ता पर भरोसा कर लें:",
+      "benefitSaveSecurely": "आपका वॉलेट इस सत्यापनकर्ता को विश्वसनीय रूप में याद रखेगा।",
       "benefitAddToTrustedList": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
-      "benefitSkipReviewFuture": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
+      "benefitSkipReviewFuture": "भविष्य में इस सत्यापनकर्ता के अनुरोध स्वचालित रूप से भरोसेमंद माने जाएंगे।",
       "trustButton": "हाँ, मैं इस सत्यापनकर्ता पर भरोसा करता हूँ",
       "notTrustButton": "नहीं, मैं इस सत्यापनकर्ता पर भरोसा नहीं करता हूँ",
       "infoTooltipButton": "भरोसा करने का क्या मतलब है?",
@@ -512,9 +512,16 @@
       "addTrustedVerifierError": "सत्यापनकर्ता को विश्वसनीय सूची में जोड़ने में विफल रहा।"
     },
     "ErrorCard": {
-      "defaultTitle": "त्रुटि",
-      "defaultDescription": "कुछ गलत हो गया। कृपया पुन: प्रयास करें।",
+      "defaultTitle": "कुछ गलत हो गया",
+      "defaultDescription": "हम आपका अनुरोध पूरा नहीं कर सके। कृपया बंद करें और बाद में पुनः प्रयास करें।",
+      "technicalTitle": "ओह! एक त्रुटि हुई।",
+      "technicalDescription": "आपके अनुरोध को संसाधित करते समय एक तकनीकी समस्या हुई। कृपया कुछ समय बाद पुनः प्रयास करें।",
       "closeButton": "बंद करें"
+    },
+    "RetryCard": {
+      "defaultTitle": "कुछ गलत हो गया",
+      "defaultDescription": "हम आपका अनुरोध पूरा नहीं कर सके। कृपया पुनः प्रयास करें।",
+      "retryButton": "पुनः प्रयास करें"
     },
     "loadingCard": {
       "title": "सत्यापनकर्ता जानकारी लाई जा रही है...",
