--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -396,7 +396,7 @@
     "success": "ಮುಂದುವರೆಯಿರಿ",
     "cancel": "ರದ್ದುಮಾಡು"
   },
-  "LoadingModalLandscape": {
+  "ShareHandlerLoadingModal": {
     "message": "ನಿಮ್ಮ ಸುರಕ್ಷಿತ ಕ್ರೆಡೆನ್ಷಿಯಲ್ ಪ್ರಸ್ತುತಿ ಸಿದ್ಧಪಡಿಸಲಾಗುತ್ತಿದೆ..."
   },
   "CredentialShareSuccessModal": {
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "ಅಪರಿಚಿತ ವಿತರಕ",
-      "description": "ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ಗುರುತಿಸುತ್ತೀರಿ ಅಥವಾ ನಂಬುತ್ತೀರಿ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nಒಮ್ಮೆ ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬಿದರೆ:",
-      "benefitSaveSecurely": "ಕಾರ್ಡ್ ನಿಮ್ಮ ವಾಲೆಟ್‌ನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಉಳಿಸಲಾಗುತ್ತದೆ.",
+      "description": "ಈ ಪರಿಶೀಲಕನನ್ನು ನೀವು ಗುರುತಿಸುತ್ತೀರಾ ಅಥವಾ ನಂಬುತ್ತೀರಾ ಎಂಬುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nನೀವು ಈ ಪರಿಶೀಲಕರನ್ನು ನಂಬಿದ ನಂತರ:",
+      "benefitSaveSecurely": "ನಿಮ್ಮ ವಾಲೆಟ್ ಈ ಪರಿಶೀಲಕರನ್ನು ವಿಶ್ವಾಸಾರ್ಹವಾಗಿ ನೆನಪಿಟ್ಟುಕೊಳ್ಳುತ್ತದೆ.",
       "benefitAddToTrustedList": "ಈ ವಿತರಣೆದಾರರನ್ನು ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲಾಗುತ್ತದೆ.",
-      "benefitSkipReviewFuture": "ಮುಂದಿನ ಬಾರಿ ಅವರಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡುವಾಗ ನೀವು ಮತ್ತೆ ವಿಶ್ವಾಸಾರ್ಹತೆಯನ್ನು ಪರಿಶೀಲಿಸುವ ಅಗತ್ಯವಿಲ್ಲ.",
+      "benefitSkipReviewFuture": "ಭವಿಷ್ಯದ ಪರಿಶೀಲನಾ ವಿನಂತಿಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ವಿಶ್ವಾಸಾರ್ಹವಾಗಿ ಪರಿಗಣಿಸಲ್ಪಡುತ್ತವೆ.",
       "trustButton": "ಹೌದು, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುತ್ತೇನೆ",
       "notTrustButton": "ಇಲ್ಲ, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದಿಲ್ಲ",
       "infoTooltipButton": "ನಂಬಿಕೆ ಇಡುವುದು ಅಂದರೆ ಏನು?",
@@ -512,9 +512,16 @@
       "addTrustedVerifierError": "ವಿತರಣೆದಾರರನ್ನು ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲು ವಿಫಲವಾಗಿದೆ."
     },
     "ErrorCard": {
-      "defaultTitle": "ದೋಷ",
-      "defaultDescription": "ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "defaultTitle": "ಏನೋ ತಪ್ಪಾಗಿದೆ",
+      "defaultDescription": "ನಾವು ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ದಯವಿಟ್ಟು ಮುಚ್ಚಿ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "technicalTitle": "ಅಯ್ಯೋ! ದೋಷ ಸಂಭವಿಸಿದೆ.",
+      "technicalDescription": "ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸುವಾಗ ತಾಂತ್ರಿಕ ಸಮಸ್ಯೆ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "closeButton": "ಮುಚ್ಚಿ"
+    },
+    "RetryCard": {
+      "defaultTitle": "ಏನೋ ತಪ್ಪಾಗಿದೆ",
+      "defaultDescription": "ನಾವು ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "retryButton": "ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ"
     },
     "loadingCard": {
       "title": "ವಿತರಣೆದಾರರ ಮಾಹಿತಿಯನ್ನು ಪಡೆಯಲಾಗುತ್ತಿದೆ...",
