--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -396,7 +396,7 @@
     "success": "தொடரவும்",
     "cancel": "ரத்து செய்"
   },
-  "LoadingModalLandscape": {
+  "ShareHandlerLoadingModal": {
     "message": "உங்கள் பாதுகாப்பான அங்கீகார அறிக்கையை தயாரித்து வருகிறது..."
   },
   "CredentialShareSuccessModal": {
@@ -491,10 +491,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "அறியப்படாத வழங்குநர்",
-      "description": "இந்த வழங்குநரை நீங்கள் அங்கீகரிக்கிறீர்கள் அல்லது நம்புகிறீர்கள் என்பதை உறுதிப்படுத்தவும். \nநீங்கள் இந்த வழங்குநரை நம்பிய பிறகு:",
-      "benefitSaveSecurely": "அட்டை உங்கள் வாலட்டில் பாதுகாப்பாகச் சேமிக்கப்படும்.",
+      "description": "இந்த சரிபார்ப்பவரை நீங்கள் அறிந்தவரா அல்லது அவரை நம்புகிறீர்களா என்பதை உறுதிப்படுத்துங்கள். \nநீங்கள் இந்த சரிபார்ப்பவரை நம்பியபின்:",
+      "benefitSaveSecurely": "உங்கள் பணப்பை இந்த சரிபார்ப்பவரை நம்பத்தகுந்தவராக நினைவில் வைத்துக்கொள்ளும்.",
       "benefitAddToTrustedList": "இந்த வழங்கி உங்கள் நம்பகமான பட்டியலில் சேர்க்கப்படும்.",
-      "benefitSkipReviewFuture": "அடுத்த முறை இவர்களிடமிருந்து பதிவிறக்கும்போது மீண்டும் நம்பகத்தன்மையைச் சரிபார்க்கத் தேவையில்லை.",
+      "benefitSkipReviewFuture": "எதிர்கால சரிபார்ப்பு கோரிக்கைகள் தானாகவே நம்பத்தகுந்ததாக எண்ணப்படும்.",
       "trustButton": "ஆம், நான் இந்த வழங்கியை நம்புகிறேன்",
       "notTrustButton": "இல்லை, நான் இந்த வழங்கியை நம்பவில்லை",
       "infoTooltipButton": "நம்புவது என்றால் என்ன?",
@@ -510,6 +510,18 @@
       "validateVerifierError": "வழங்கி கோரிக்கையைச் சரிபார்க்க முடியவில்லை. மீண்டும் முயற்சிக்கவும்.",
       "invalidVerifierResponse": "தவறான வழங்கி பதில் பெறப்பட்டது.",
       "addTrustedVerifierError": "நம்பகமான பட்டியலில் வழங்கியைச் சேர்க்க முடியவில்லை."
+    },
+    "ErrorCard": {
+      "defaultTitle": "ஏதோ தவறு ஏற்பட்டுள்ளது",
+      "defaultDescription": "உங்கள் கோரிக்கையை நிறைவேற்ற முடியவில்லை. தயவுசெய்து மூடி பின்னர் மீண்டும் முயற்சிக்கவும்.",
+      "technicalTitle": "அச்சு! ஒரு பிழை ஏற்பட்டது.",
+      "technicalDescription": "உங்கள் கோரிக்கையை செயலாக்கும் போது தொழில்நுட்ப சிக்கல் ஏற்பட்டது. சில நேரம் கழித்து மீண்டும் முயற்சிக்கவும்.",
+      "closeButton": "மூடு"
+    },
+    "RetryCard": {
+      "defaultTitle": "ஏதோ தவறு ஏற்பட்டுள்ளது",
+      "defaultDescription": "உங்கள் கோரிக்கையை நிறைவேற்ற முடியவில்லை. தயவுசெய்து மீண்டும் முயற்சிக்கவும்.",
+      "retryButton": "மீண்டும் முயற்சிக்கவும்"
     },
     "loadingCard": {
       "title": "வழங்கி தகவலைப் பெறுகிறது...",
