[INJIWEB-1765] - Call Reject Presentation for Cancel Refractor code for Reusability Add Test Cases for new code Update Locales for new static texts
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -501,9 +501,9 @@
       "infoTooltipText": "إن الثقة في الموثّق تسمح له بطلب بيانات الاعتماد الخاصة بك. ستظل تختار بيانات الاعتماد التي تريد مشاركتها في الخطوة التالية."
     },
     "TrustRejectionModal": {
-      "title": "هل أنت متأكد أنك تريد الإلغاء؟",
-      "description": "إذا قمت بالإلغاء، فلن تتم معالجة طلبك وقد يُفقد.",
-      "confirmButton": "نعم، إلغاء",
+      "title": "هل أنت متأكد أنك لا تريد الوثوق بهذا الموثّق؟",
+      "description": "لا يمكن أن يستمر هذا الطلب ما لم تثق بهذا الموثّق. إذا لم تفعل، فسيتم إيقاف الطلب وستحتاج إلى بدء طلب جديد مع موثّقك.",
+      "confirmButton": "لا أثق وألغي",
       "goBackButton": "العودة"
     },
     "UserAuthorizationPage": {
