--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -501,9 +501,9 @@
       "infoTooltipText": "Faire confiance à un vérificateur leur permet de demander vos informations d'identification. Vous choisirez toujours les informations d'identification à partager à l'étape suivante."
     },
     "TrustRejectionModal": {
-      "title": "Êtes-vous sûr de vouloir annuler ?",
-      "description": "Si vous annulez, votre demande ne sera pas traitée et pourrait être perdue.",
-      "confirmButton": "Oui, Annuler",
+      "title": "Êtes-vous sûr de ne pas vouloir faire confiance à ce vérificateur ?",
+      "description": "Cette demande ne peut pas continuer à moins que vous ne fassiez confiance à ce vérificateur. Si vous ne le faites pas, la demande s'arrêtera et vous devrez commencer une nouvelle demande avec votre vérificateur.",
+      "confirmButton": "Ne pas faire confiance et annuler",
       "goBackButton": "Retourner"
     },
     "UserAuthorizationPage": {
