--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -501,9 +501,9 @@
       "infoTooltipText": "सत्यापनकर्ता पर भरोसा करने से उन्हें आपकी साख का अनुरोध करने की अनुमति मिलती है। अगले चरण में साझा करने के लिए आप अभी भी साख का चयन करेंगे।"
     },
     "TrustRejectionModal": {
-      "title": "क्या आप वाकई रद्द करना चाहते हैं?",
-      "description": "यदि आप इसे रद्द करते हैं, तो आपका अनुरोध संसाधित नहीं होगा और खो सकता है।",
-      "confirmButton": "हाँ, रद्द करें",
+      "title": "क्या आप वाकई इस सत्यापनकर्ता पर भरोसा नहीं करना चाहते हैं?",
+      "description": "जब तक आप इस सत्यापनकर्ता पर भरोसा नहीं करते, यह अनुरोध आगे नहीं बढ़ सकता। यदि आप नहीं करते हैं, तो अनुरोध रुक जाएगा और आपको अपने सत्यापनकर्ता के साथ एक नया अनुरोध शुरू करना होगा।",
+      "confirmButton": "भरोसा न करें और रद्द करें",
       "goBackButton": "वापस जाएँ"
     },
     "UserAuthorizationPage": {
