--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -501,9 +501,9 @@
       "infoTooltipText": "ஒரு வழங்கியை நம்புவது, உங்கள் சான்றுகளைக் கோர அவர்களை அனுமதிக்கிறது. அடுத்த கட்டத்தில் பகிர வேண்டிய சான்றுகளை நீங்கள் இன்னும் தேர்வு செய்வீர்கள்."
     },
     "TrustRejectionModal": {
-      "title": "நீங்கள் ரத்துசெய்ய விரும்புகிறீர்களா?",
-      "description": "நீங்கள் இதை ரத்துசெய்தால், உங்கள் கோரிக்கை செயலாக்கப்படாது மற்றும் அது இழக்கப்படலாம்.",
-      "confirmButton": "ஆம், ரத்துசெய்",
+      "title": "நீங்கள் இந்த சரிபார்ப்பவரை நம்ப விரும்பவில்லை என்பது உறுதியா?",
+      "description": "நீங்கள் இந்த சரிபார்ப்பவரை நம்பாத வரை இந்த கோரிக்கை தொடர முடியாது. நீங்கள் செய்யாவிட்டால், கோரிக்கை நிறுத்தப்படும் மற்றும் நீங்கள் உங்கள் சரிபார்ப்பவருடன் ஒரு புதிய கோரிக்கையைத் தொடங்க வேண்டும்.",
+      "confirmButton": "நம்ப வேண்டாம் மற்றும் ரத்துசெய்",
       "goBackButton": "பின் செல்லவும்"
     },
     "UserAuthorizationPage": {
