--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -502,9 +502,9 @@
         "infoTooltipText": "Trusting a verifier allows them to request your credentials. You’ll still choose which credentials to share in the next step."
       },
       "TrustRejectionModal": {
-        "title": "Are you sure you want to cancel?",
-        "description": "If you cancel this, your request will not be processed and may be lost.",
-        "confirmButton": "Yes, Cancel",
+        "title": "Are you sure you don’t want to trust this verifier?",
+        "description": "This request cannot proceed unless you trust this verifier. If you don’t, the request will stop and you will need to start a new request with your verifier.",
+        "confirmButton": "Don’t trust and cancel",
         "goBackButton": "Go back"
       },
       "UserAuthorizationPage": {
