--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -501,9 +501,9 @@
       "infoTooltipText": "ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದು ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಕೋರಲು ಅವರಿಗೆ ಅನುಮತಿಸುತ್ತದೆ. ಮುಂದಿನ ಹಂತದಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಲು ನೀವು ಯಾವ ರುಜುವಾತುಗಳನ್ನು ಆರಿಸುತ್ತೀರಿ."
     },
     "TrustRejectionModal": {
-      "title": "ನೀವು ಖಚಿತವಾಗಿ ರದ್ದುಮಾಡಲು ಬಯಸುತ್ತೀರಾ?",
-      "description": "ನೀವು ಇದನ್ನು ರದ್ದುಮಾಡಿದರೆ, ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸಲಾಗುವುದಿಲ್ಲ ಮತ್ತು ಅದು ಕಳೆದುಹೋಗಬಹುದು.",
-      "confirmButton": "ಹೌದು, ರದ್ದುಮಾಡು",
+      "title": "ನೀವು ಖಚಿತವಾಗಿ ಈ ಪರಿಶೀಲಕರನ್ನು ನಂಬಲು ಬಯಸುವುದಿಲ್ಲವೇ?",
+      "description": "ನೀವು ಈ ಪರಿಶೀಲಕರನ್ನು ನಂಬದ ಹೊರತು ಈ ವಿನಂತಿಯನ್ನು ಮುಂದುವರಿಸಲಾಗುವುದಿಲ್ಲ. ನೀವು ಮಾಡದಿದ್ದರೆ, ವಿನಂತಿಯು ನಿಲ್ಲುತ್ತದೆ ಮತ್ತು ನೀವು ನಿಮ್ಮ ಪರಿಶೀಲಕರೊಂದಿಗೆ ಹೊಸ ವಿನಂತಿಯನ್ನು ಪ್ರಾರಂಭಿಸಬೇಕಾಗುತ್ತದೆ.",
+      "confirmButton": "ನಂಬಬೇಡಿ ಮತ್ತು ರದ್ದುಮಾಡಿ",
       "goBackButton": "ಹಿಂದೆ ಹೋಗಿ"
     },
     "UserAuthorizationPage": {
